--- a/css/index.css
+++ b/css/index.css
@@ -278,7 +278,7 @@ z-index: 10;
 }
 .images::before
 {
-    background: url(images/vedio.png) no-repeat;
+    background: url(../images/vedio.png) no-repeat;
     background-size: cover;
     width: 20px;
     height: 20px;
@@ -295,7 +295,7 @@ z-index: 10;
     margin: 0;
 }
 .second{
-    background-image: url(images/cloud.jpg);
+    background-image: url(../images/cloud.jpg);
     background-repeat: no-repeat;
     width: 100%;
     height: 447px;
@@ -704,19 +704,19 @@ display: inline-block;
 }
 .five ul li>a .img-1
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 -474px;
     background-size: cover;
 }
 .five ul li>a .img-2
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 22px;
     background-size: cover;
 }
 .five ul li>a .img-3
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 -74px;
     background-size: cover;
 }
@@ -968,25 +968,25 @@ display: inline-block;
 }
 .seven ul li>a .img-1
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 -174px;
     background-size: cover;
 }
 .seven ul li>a .img-2
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 -374px;
     background-size: cover;
 }
 .seven ul li>a .img-3
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 -549px;
     background-size: cover;
 }
 .seven ul li>a .img-4
 {
-    background: url(images/five-logo.png) no-repeat;
+    background: url(../images/five-logo.png) no-repeat;
     background-position: 0 -274px;
     background-size: cover;
 }
@@ -1013,7 +1013,7 @@ display: inline-block;
     width: 100%;
     height: 400px;
     padding: 0px 0 230px;
-    background: url(images/8dd.jpg) no-repeat;
+    background: url(../images/8dd.jpg) no-repeat;
     background-position: bottom;
     background-size: 100% 500px;
     position: relative;
