--- a/css/index.css
+++ b/css/index.css
@@ -7,6 +7,11 @@ body
     text-decoration: none;
     color: #fff;
 }
+.vedio video
+{
+    width: 100%;
+    height: 100%;
+}
 .nav
 {
 height: 60px;
@@ -739,17 +744,16 @@ display: inline-block;
 }
 .six
 {
-    height: 790px;
+    height: 730px;
     position: relative;
 }
 .six>span
 {
     position: absolute;
     width: 100%;
-    height: 92%;
+    height: 100%;
     background-color: rgba(0,0,0,.6);
     z-index: 1;
-    margin-top: 31px;
 }
 .six video
 {
@@ -761,7 +765,12 @@ display: inline-block;
 {
     position: absolute;
     z-index: 10;
-    top: 18%;
+    top: 50%;
+    left: 50%;
+    width: 1216px;
+    height: 525px;
+    margin-top: -262px;
+    margin-left: -608px;
 }
 .six .main h3
 {
